# DAR_Receiving_Dock_Cards

./: .env.example  .gitignore  ACL_COMPLETE_FEATURE.md  ACL_DEBUGGING_GUIDE.md  ACL_FEATURE_IMPLEMENTATION.md  ACL_INSTALL_GUIDE.txt  ACL_RECOMMENDATION_SYSTEM.txt  API_MIGRATION_COMPLETE.txt  BROWSER_CONSOLE_DEBUGGING.md  BUGS_FIXED_FEATURES_ADDED.md  CAPTURING_FAST_REDIRECTS.md  CLIENT_README.md  CLIENT_SERVER_ARCHITECTURE.md  DATABASE.md  DATABASE_SCHEMA_NOTES.txt  DELIVERY_ANALYSIS_CHECKLIST.md  DELIVERY_ANALYSIS_GUIDE.md  DELIVERY_ANALYSIS_IMPLEMENTATION.md  DEPENDENCIES.md  DEPLOYMENT_CHECKLIST.md  ENHANCEMENTS_FINAL.txt  EXTRACT_JWT_TOKEN.md  FEATURES_ADDED.txt  FIXES_APPLIED.txt  FIX_APPLIED.txt  GITHUB_PUSH_INSTRUCTIONS.txt  JAVASCRIPT_FIX.txt  LATEST_FIXES.txt  MDM_API_FIXES.txt  MIGRATION_COMPLETE.txt  NETWORK_SETUP_GUIDE.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_STATUS.txt  QUERY_UPDATE.md  QUICKSTART.md  QUICK_REFERENCE.txt  QUICK_START_CLIENT_SERVER.md  README.md  README_ACL_FEATURE.md  READY_FOR_GITHUB.txt  (+55 more)
_archive/: acl_code.txt  fix_freight_qty.py  main_backup_before_redesign.py  new_pdf_endpoint.py  test_cache.py
_docs/: ACL_REDESIGN_INTEGRATION.md  ACL_REDESIGN_TESTING.md  CLEANUP_SUMMARY.md  README_ACL_FEATURE.md  UPDATES_SUMMARY.md
_installers/: FINAL_ACL_INSTALLER.py  acl_code.py  acl_feature_final.py  acl_insert.py  add_acl.py  install_acl.py
docs/: ARCHITECTURE_CORRECTED.md  OPTIMIZATION_SUMMARY.md
reference/: department_bands.json  mdm_item_api_response_example.json
scripts/: diagnose_acl_cache.py
