[project]
name = "codepuppydar"
version = "0.1.0"
description = "Informix Deliveries Dashboard"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "ibm-db>=3.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-url = "https://pypi.ci.artifacts.walmart.com/artifactory/api/pypi/external-pypi/simple"
allow-insecure-host = ["pypi.ci.artifacts.walmart.com"]
